--- a/website/templates/get_started_form.html
+++ b/website/templates/get_started_form.html
@@ -6,7 +6,8 @@
             <div class="get-started-box-header"></div>
             <div class="get-started-box-body">
                 <p class="text-center">Whatever your budget, whatever your timeline.</p>
-                <form>
+                <form action="{% url 'contact-us' %}" method="post">
+                    {% csrf_token %}
                     <div class="col-md-6">
                         <div class="form-group row">
 
@@ -18,10 +19,10 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="school_name" placeholder="Your School Name"/>
+                            <input class="form-control" type="text" name="organization" placeholder="Your School Name"/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" type="text" name="email_address" placeholder="Your Email Address"/>
+                            <input class="form-control" type="text" name="email" placeholder="Your Email Address"/>
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -29,7 +30,7 @@
                             <input class="form-control" type="text" name="date" placeholder="Date"/>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" type="text" name="request" placeholder="Your Request"></textarea>
+                            <textarea class="form-control" type="text" name="message" placeholder="Your Request"></textarea>
                         </div>
                     </div>
                     <div class="clearfix"></div>
