--- a/website/templates/website/contact-us.html
+++ b/website/templates/website/contact-us.html
@@ -8,7 +8,7 @@
         <div class="container">
             <h2 class="title">CONTACT US</h2>
             <div class="row">
-                <form>
+                <form action="{% url 'contact-us' %}" method="post">
                     <div class="col-md-6">
                         <div class="form-group">
                             <input type="text" name="first_name" placeholder="First Name" class="form-control"/>
