--- a/website/templates/website/contact-us.html
+++ b/website/templates/website/contact-us.html
@@ -9,20 +9,25 @@
             <h2 class="title">CONTACT US</h2>
             <div class="row">
                 <form action="{% url 'contact-us' %}" method="post">
+                    {% csrf_token %}
                     <div class="col-md-6">
                         <div class="form-group">
-                            <input type="text" name="first_name" placeholder="First Name" class="form-control"/>
+                            <input type="text" name="first_name" placeholder="First Name" class="form-control"
+                            data-sanitize="trim" data-validation="length" data-validation-length="min3"/>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="last_name" placeholder="Last Name" class="form-control"/>
+                            <input type="text" name="last_name" placeholder="Last Name" class="form-control"
+                            data-sanitize="trim" data-validation="length" data-validation-length="min3"/>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="email" placeholder="Email Address" class="form-control"/>
+                            <input type="text" name="email" placeholder="Email Address" class="form-control"
+                            data-sanitize="trim" data-validation="email"/>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="form-group">
-                            <textarea name="message" placeholder="Message" class="form-control"></textarea>
+                            <textarea name="message" placeholder="Message" class="form-control"
+                            data-sanitize="trim" data-validation="length" data-validation-length="min20"></textarea>
                         </div>
                         <div class="row">
                             <div class="form-group col-sm-6">
