--- a/website/templates/website/travels.html
+++ b/website/templates/website/travels.html
@@ -36,7 +36,7 @@
                         <div class="media-left">
                             {% if trip.photos %}
                             <a href="{% url 'trip' trip.id %}">
-                              <img class="media-object img-thumbnail" src="/media/{{ trip.photos.0.photo }}" alt="{{ trip.title }}" width="100" onerror="this.src='{% static 'img/no-image-featured-image.png' %}'">
+                              <img class="media-object img-thumbnail" src="{% get_media_prefix %}{{ trip.photos.0.photo }}" alt="{{ trip.title }}" width="100" onerror="this.src='{% static 'img/no-image-featured-image.png' %}'">
                             </a>
                             {% endif %}
                         </div>
@@ -54,7 +54,7 @@
                     <div class="media">
                         <div class="media-left">
                             <a href="{% url 'event' event.id %}">
-                              <img class="media-object img-thumbnail" src="/media/{{ event.photos.0.photo }}" alt="{{ event.title }}" width="100" onerror="this.src='{% static 'img/no-image-featured-image.png' %}'">
+                              <img class="media-object img-thumbnail" src="{% get_media_prefix %}{{ event.photos.0.photo }}" alt="{{ event.title }}" width="100" onerror="this.src='{% static 'img/no-image-featured-image.png' %}'">
                             </a>
                         </div>
                         <div class="media-body">
